# atrium-csd-ner

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  api.py  docker-compose.yml  main.py  pyproject.toml  ui.py
.agent/: instructions.md  project_log.md  reorganization_todo.md
.streamlit/: config.toml
deployment/: api.Dockerfile  ui.Dockerfile
docs/: archaeobert_ner_gudelines_mt_translation.md  evaluation_report.md  index.md  modules.md
notebooks/: GLiNER2_finetune_notebook.ipynb  atrium-ner-training-eval.ipynb  atrium-process.ipynb  gliner_synthetic_data.ipynb  synthetic_data_generation.ipynb
src/atrium_csd_ner/: api.py  core.py  data_utils.py  guidelines_utils.py  models.py  synthetic.py  ui.py
src/atrium_csd_ner/scripts/: inference.py  inspect.py  synthetic_gen.py  train.py
tests/: test_foo.py
